<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:drawingCacheQuality="auto"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/logoexpertappsmall" />

    <EditText
        android:id="@+id/usuario_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="#DCF7FF"
        android:backgroundTint="#DCF7FF"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:background="#DCF7FF"
        android:backgroundTint="#DCF7FF"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#08295A"
        android:onClick="iniciarSesion"
        android:padding="15dp"
        android:text="@string/iniciarsesion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/msgcuenta"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="#104977"
        android:textColorHighlight="#084473"
        android:textColorLink="#104A78"
        android:textSize="40sp"
        android:textStyle="bold" />

</LinearLayout>