<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarServicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NuevoServicio">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/editarservicio"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombre_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DCF7FF"
                    android:backgroundTint="#DCF7FF"
                    android:ems="10"
                    android:hint="@string/nombreservicio"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/celular_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DCF7FF"
                    android:backgroundTint="#DCF7FF"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/email_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DCF7FF"
                    android:backgroundTint="#DCF7FF"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/direccion_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DCF7FF"
                    android:backgroundTint="#DCF7FF"
                    android:ems="10"
                    android:hint="@string/direccion"
                    android:inputType="textLongMessage" />

                <EditText
                    android:id="@+id/descripcion_servicio"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="#DCF7FF"
                    android:backgroundTint="#DCF7FF"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/descripcion"
                    android:inputType="textLongMessage" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:backgroundTint="#144168"
                    android:text="@string/guardar"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="#F12314"
                    android:text="@string/eliminarservicio"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>